fix icon like android icon app

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/media/ic_affandy.svg" />
+  <link rel="icon" type="image/svg+xml" href="/media/ic_kurs_saldo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kurs Saldo</title>
 </head>
